# dmriseg

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: check_format.yml  test_package.yml
dmriseg/: __init__.py
dmriseg/_utils/: __init__.py  docs.py
dmriseg/analysis/: measures.py
dmriseg/config/: config_keys.py  hdf5_dataset_keys.py  parsing_utils.py
dmriseg/dataset/: dmri_data_management.py  dmri_dataset.py  utils.py
dmriseg/image/: utils.py
dmriseg/io/: file_extensions.py  hdf5_utils.py  learning_description.py  study_description.py  utils.py
examples/: plot_contour_variability.py  plot_roi_misc.py
scripts/: aggregate_performance_folds.py  aggregate_performance_folds_experiment.sh  aggregate_performance_folds_experiment_all.sh  compare_volume_similarity.py  compute_cv.py  compute_cv.sh  compute_group_stats.py  compute_group_stats_experiment.sh  compute_group_stats_experiment_all.sh  compute_intensity_stats.py  compute_labelmap_volume_stats.py  compute_pairwise_test.py  compute_pairwise_test_experiment.sh  compute_pairwise_test_experiment_ismrm.sh  compute_pairwise_test_experiment_subsampling.sh  compute_performance.py  compute_performance_experiment.sh  compute_statistical_significance.py  compute_volume_similarity.py  compute_volume_similarity_experiment.sh  compute_wilcoxon_ranksum.py  correct_pairwise_test_results.py  correct_pairwise_test_results_experiment_ismrm.sh  correct_pairwise_test_results_experiment_subsampling.sh  create_dmri_dataset_hdf5.py  create_participant_folds.py  evaluate_performance.py  export_performance_plots.sh  fs_lut2tsv.py  perform_anova_analysis.py  perform_anova_analysis_experiment.sh  perform_anova_analysis_experiment_ismrm.sh  perform_anova_analysis_experiment_subsampling.sh  plot_contrasts_label_contours.sh  plot_labelmap_volume_distribution.py  plot_measure_distribution.py  plot_measure_distribution_experiment.sh  plot_measure_distribution_experiment_ismrm.sh  plot_performance.py  plot_performance_groups_violin.py  (+29 more)
(+31 files in other folders)
