[build-system]
requires = [
    "setuptools >= 66",
    "wheel",
    "setuptools_scm >= 6.4",
]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Jon Haitz Legarreta"}, {email = "jon.haitz.legarreta@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "antspyx",
    "dipy",
    "fury",
    "h5py",
    "matplotlib",
    "monai",
    "nibabel",
    "numpy",
    "pandas",
    "pynrrd",
    "pyyaml",
    "Pillow",
    "scikit-image",
    "seaborn",
    "seg-metrics",
    "SUITPy",
    "torch",
    "tqdm",
]
description = "Cerebellum segmentation"
keywords = ["DL, DWI, ML, neuroimaging, segmentation"]
maintainers = [
  {name = "Jon Haitz Legarreta"}, {email = "jon.haitz.legarreta@gmail.com"}
]
name = "dmriseg"
version = "0.0.1"
requires-python = ">=3.8"


[project.optional-dependencies]
test = [
    "pytest >= 5.3",
    "pytest-cov",
    "pytest-pep8",
    "pytest-xdist",
]
dev = [
    "black == 22.12",
    "flake8 == 3.9.2",
    "flake8-docstrings == 1.6.0",
    "isort == 5.12.0",
    "pre-commit >= 2.9.0",
]

[options.extras_require]
all = [
    "%(test)s",
]

[tool.black]
line-length = 79
target-version = ["py38"]
exclude ='''
(
  /(
      \.eggs        # exclude a few common directories in the
    | \.git         # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | data            # also separately exclude project-specific files
                    # and folders in the root of the project
)
'''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["dmriseg"]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[tool.setuptools_scm]
write_to = "dmriseg/_version.py"
